--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+    <style>
+    td.wb {
+	color: #070;
+    }
+    </style>
   </head>
   <body>
     <div class="container" id="content">
@@ -39,20 +44,22 @@
       </div>
 
       <h2>Fristen</h2>
-      <div class="col-sm-8">
+      <div class="col-lg-8">
         <table class="table table-striped table-hover">
         <tr><th>Aktion</th><th>Frist</th></tr>
         <tr><td>Festlegung des Wahltermins</td><td id="flwahltermin">-</td></tr>
         <tr><td>Wahl des Wahlleiters und des Wahlausschusses</td><td id="wlundwa">-</td></tr>
+        <tr><td>Stichtag Wahlberechtigung</td><td id="stwber">-</td></tr>
         <tr><td>Konstituierende Sitzung des Wahlausschusses</td><td id="konstwa">-</td></tr>
         <tr><td>Festlegung der Auslageorte des Wählerverzeichnisses</td><td id="flaowvz">-</td></tr>
         <tr><td>Wahlbekanntmachung</td><td id="wbk">-</td></tr>
-        <tr><td>Auslage des Wählerverzeichnisses Start</td><td id="alwvzs">-</td></tr>
-        <tr><td>Auslage des Wählerverzeichnisses Ende</td><td id="alwvze">-</td></tr>
-        <tr><td>Frist zur Einreichung von Wahlvorschlägen</td><td id="wv">-</td></tr>
+        <tr><td class="wb">Auslage des Wählerverzeichnisses Start</td><td id="alwvzs">-</td></tr>
+        <tr><td class="wb">Auslage des Wählerverzeichnisses Ende</td><td id="alwvze">-</td></tr>
+        <tr><td class="wb">Frist zur Einreichung von Wahlvorschlägen</td><td id="wv">-</td></tr>
         <tr><td>Bekanntmachung der Wahlvorschläge</td><td id="bkwv">-</td></tr>
-        <tr><td><i>Erster Wahltag</i></td><td id="ewt">-</td></tr>
-        <tr><td><i>Letzter Wahltag</i></td><td id="lwt">-</td></tr>
+        <tr><td class="wb">Frist zur Einreichung von Briefwahlanträgen</td><td id="fbw">-</td></tr>
+        <tr><td class="wb"><i>Erster Wahltag</i></td><td id="ewt">-</td></tr>
+        <tr><td class="wb"><i>Letzter Wahltag</i></td><td id="lwt">-</td></tr>
         <tr><td>Veröffentlichung des Wahlergebnisprotokolls</td><td id="vwep">-</td></tr>
         <tr><td>Konstituierende Sitzung der FSV</td><td id="konstfsv">-</td></tr>
         </table>
