--- a/index.html
+++ b/index.html
@@ -25,45 +25,126 @@
   </head>
   <body>
     <div class="container" id="content">
-      <h1>Wahlfristen</h1>
+	<h1>Wahlfristen</h1>
 
-      <h2>Wahltage</h2>
-      <div class="form-horizontal">
-        <div class="form-group">
-          <label for="datestart" class="col-sm-2 control-label">Erster Wahltag</label>
-          <div class="col-sm-2">
-            <input type="date" class="form-control" id="datestart">
-          </div>
-        </div>
-        <div class="form-group">
-          <label for="dateend" class="col-sm-2 control-label">Letzter Wahltag</label>
-          <div class="col-sm-2">
-            <input type="date" class="form-control" id="dateend">
-          </div>
-        </div>
-      </div>
+	<h2>Wahltage</h2>
+	<div class="form-horizontal">
+		<div class="form-group">
+		<label for="datestart" class="col-sm-2 control-label">Erster Wahltag</label>
+		<div class="col-sm-2">
+		<input type="date" class="form-control" id="datestart">
+		</div>
+		</div>
+		<div class="form-group">
+		<label for="dateend" class="col-sm-2 control-label">Letzter Wahltag</label>
+		<div class="col-sm-2">
+		<input type="date" class="form-control" id="dateend">
+		</div>
+		</div>
+	</div>
 
-      <h2>Fristen</h2>
-      <div class="col-lg-8">
-        <table class="table table-striped table-hover">
-        <tr><th>Aktion</th><th>Frist</th></tr>
-        <tr><td>Festlegung des Wahltermins</td><td id="flwahltermin">-</td></tr>
-        <tr><td>Wahl des Wahlleiters und des Wahlausschusses</td><td id="wlundwa">-</td></tr>
-        <tr><td>Stichtag Wahlberechtigung</td><td id="stwber">-</td></tr>
-        <tr><td>Konstituierende Sitzung des Wahlausschusses</td><td id="konstwa">-</td></tr>
-        <tr><td>Festlegung der Auslageorte des Wählerverzeichnisses</td><td id="flaowvz">-</td></tr>
-        <tr><td>Wahlbekanntmachung</td><td id="wbk">-</td></tr>
-        <tr><td class="wb">Auslage des Wählerverzeichnisses Start</td><td id="alwvzs">-</td></tr>
-        <tr><td class="wb">Auslage des Wählerverzeichnisses Ende</td><td id="alwvze">-</td></tr>
-        <tr><td class="wb">Frist zur Einreichung von Wahlvorschlägen</td><td id="wv">-</td></tr>
-        <tr><td>Bekanntmachung der Wahlvorschläge</td><td id="bkwv">-</td></tr>
-        <tr><td class="wb">Frist zur Einreichung von Briefwahlanträgen</td><td id="fbw">-</td></tr>
-        <tr><td class="wb"><i>Erster Wahltag</i></td><td id="ewt">-</td></tr>
-        <tr><td class="wb"><i>Letzter Wahltag</i></td><td id="lwt">-</td></tr>
-        <tr><td>Veröffentlichung des Wahlergebnisprotokolls</td><td id="vwep">-</td></tr>
-        <tr><td>Konstituierende Sitzung der FSV</td><td id="konstfsv">-</td></tr>
-        </table>
-      </div>
+	<div class="row">
+	<h2>Fristen</h2>
+	<div class="col-lg-8">
+		<table class="table table-striped table-hover">
+		<tr><th>Aktion</th><th>Frist</th></tr>
+		<tr><td>Festlegung des Wahltermins</td><td id="flwahltermin">-</td></tr>
+		<tr><td>Wahl des Wahlleiters und des Wahlausschusses</td><td id="wlundwa">-</td></tr>
+		<tr><td>Stichtag Wahlberechtigung</td><td id="stwber">-</td></tr>
+		<tr><td>Konstituierende Sitzung des Wahlausschusses</td><td id="konstwa">-</td></tr>
+		<tr><td>Festlegung der Auslageorte des Wählerverzeichnisses</td><td id="flaowvz">-</td></tr>
+		<tr><td>Wahlbekanntmachung</td><td id="wbk">-</td></tr>
+		<tr><td class="wb">Auslage des Wählerverzeichnisses Start</td><td id="alwvzs">-</td></tr>
+		<tr><td class="wb">Auslage des Wählerverzeichnisses Ende</td><td id="alwvze">-</td></tr>
+		<tr><td class="wb">Frist zur Einreichung von Wahlvorschlägen</td><td id="wv">-</td></tr>
+		<tr><td>Bekanntmachung der Wahlvorschläge</td><td id="bkwv">-</td></tr>
+		<tr><td class="wb">Frist zur Einreichung von Briefwahlanträgen</td><td id="fbw">-</td></tr>
+		<tr><td class="wb"><i>Erster Wahltag</i></td><td id="ewt">-</td></tr>
+		<tr><td class="wb"><i>Letzter Wahltag</i></td><td id="lwt">-</td></tr>
+		<tr><td>Veröffentlichung des Wahlergebnisprotokolls</td><td id="vwep">-</td></tr>
+		<tr><td>Konstituierende Sitzung der FSV</td><td id="konstfsv">-</td></tr>
+		</table>
+	</div>
+	</div>
+	
+	<h1>Wahlbekanntmachung</h1>
+	
+	<h2>Wahl <span class="derdesfsvfsr">der</span> <span class="fsvfsr">Fachschaftsvertretung/Fachschaftsrat</span> der Fachschaft <span class="fachschaft">YOLO</span></h2>
+	
+	<p>Gewählt wird die <b><span class="fsvfsr">Fachschaftsvertretung/Fachschaftsrat</span> der Fachschaft <span class="fachschaft">Kunstgeschichte</span></b> der Rheinischen Friedrich-Wilhelms-Universität Bonn.</p>
+	
+	<p>Es sind <span class="zahl_sitze"><b>11 Mitglieder</b></span> <span class="derdesfsvfsr">der</span> <span class="fsvfsr">Fachschaftsvertretung/Fachschaftsrat</span> zu wählen.</p>
+	
+	<p>Die Wahl findet im Zeitraum <span class="wahlzeitraum">YOLO</span> statt.</p>
+	
+	<h3>Ort und Zeit der Stimmabgabe</h3>
+
+	<p>Das Wahllokal ist zu folgenden Zeiten an folgenden Orten geöffnet:</p>
+
+	<table class="table table-striped table-hover">
+	<tr><th>Datum</th><th>Uhrzeit</th><th>Ort</th></tr>
+	<tr><td>Montag, 30. November 2015</td><td>10:00 - 16:00 Uhr</td><td>Foyer des Kunsthistorischen Instituts</td></tr>
+	<tr><td>Dienstag, 01. Dezember 2015</td><td>10:00 - 16:00 Uhr</td><td>Foyer des Kunsthistorischen Instituts</td></tr>
+	<tr><td>Mittwoch, 02. Dezember 2015</td><td>10:00 - 16:00 Uhr</td><td>Foyer des Kunsthistorischen Instituts</td></tr>
+	</table>
+
+	<h3>Wahlvorschläge</h3>
+
+	<p><b>Musterformulare für Wahlvorschläge sind bei der Wahlleiterin erhältlich.<br> Ihre Verwendung wird empfohlen.</b></p>
+
+	<p>Wahlvorschläge sind bis zum <span class="frist_einreichung_wahlvorschlaege"><b>18. November 2015, 18:00 Uhr</b></span> bei der <b>Wahlleiterin</b> einzureichen. </p>
+
+	<p>Ein Wahlvorschlag enthält entweder den Namen eines Einzelkandidaten oder einen Listennamen mit den Namen der Kandidaten dieser Liste in einer erkennbaren Reihenfolge.</p>
+
+	<p>Jeder Wahlberechtigte kann sich selbst oder andere Wahlberechtigte zur Wahl vorschlagen. Der Wahlvorschlag muss mindestens von fünf Wahlberechtigten persönlich und handschriftlich unterzeichnet sein. Mit dem Wahlvorschlag ist eine unwiderrufliche, unterschriebene Erklärung jedes Kandidaten einzureichen, dass der Aufnahme in den Wahlvorschlag zugestimmt wird. Ein Kandidat darf nicht in mehrere Wahlvorschläge aufgenommen werden. Ein Wahlberechtigter darf nicht mehrere Wahlvorschläge unterzeichnen.</p>
+
+	<p>Der Wahlvorschlag muss mindestens Familien- und Vornamen, Anschriften, E-Mail-Adresse und Matrikelnummer der Kandidaten enthalten, sowie die Wahl bezeichnen, für die er gelten soll.</p>
+
+	<p>(Die Anforderungen an einen Wahlvorschlag ergeben sich aus § 7 FSWO (Siehe http://sp.uni-bonn.de/dokumente/idx/Ordnungen/FSWO.html#§7)</p>
+
+
+	<h3>Wahlsystem</h3>
+
+	<p>Eine Fachschaft bildet einen Wahlkreis. Jeder Wähler hat eine Stimme, die er für einen Kandidaten einer Wahlliste abgibt. Die Sitze werden auf die Wahllisten im Verhältnis der für sie abgegebenen Stimmen im d'Hondt'schen Höchstzahlverfahren verteilt. Die danach auf die einzelnen Wahllisten entfallenden Sitze werden in den Wahllisten aufgeführten Kandidaten in der Reihenfolge der von ihnen erreichten Stimmenzahl zugeteilt.</p>
+
+	<p>Entfallen auf eine Wahlliste mehr Sitze als diese Kandidaten enthält, so bleiben die überzähligen Sitze unbesetzt.</p>
+
+	<p>Scheidet ein gewähltes Mitglied aus, so wird der Sitz demjenigen Kandidaten derselben Wahlliste zugeteilt, der nach dem Wahlergebnis unter den bisher nicht berücksichtigten Kandidaten die meisten Stimmen hat. Ist die Wahlliste erschöpft, so bleibt der Sitz unbesetzt.</p>
+
+	<p>Bei Stimmengleichheit zwischen mehreren Kandidaten einer Liste entscheidet die Reihenfolge der Kandidaten auf der Liste über die Rangfolge. Bei Stimmengleichheit zwischen mehreren Listen entscheidet die Wahlleiterin durch Los, welcher Liste der Sitz zuzuteilen ist.</p>
+
+	<p>Wird lediglich ein gültiger Wahlvorschlag eingereicht oder ist die Zahl der Kandidierenden aller Wahlvorschläge kleiner oder gleich der Zahl der zu besetzenden Sitze (<span class="zahl_sitze">11</span>), so findet Mehrheitswahl ohne Bindung an die vorgeschlagenen Kandidaten statt. In diesem Fall liegt das Wählerverzeichnis an den Urnen aus; das Nähere über das bei der Mehrheitswahl anzuwendende Verfahren bestimmt der Wahlausschuss. Würden bei der Mehrheitswahl weniger Mitglieder gewählt als Sitze zu besetzen sind, blieben die restlichen Sitze unbesetzt.</p>
+
+	<h3>Wählerverzeichnis</h3>
+
+	<p>Wahlberechtigt und wählbar sind die Mitglieder der Fachschaft Kunstgeschichte, die am <span class="frist_wahlberechtigung"><b>31. Oktober 2015</b></span> an der Rheinischen Friedrich-Wilhelms-Universität Bonn eingeschrieben sind. Maßgeblich für die Wahlberechtigung ist darüber hinaus das bei der Immatrikulation oder der Rückmeldung für die Wahlberechtigung angegebene Fach. Zweithörer und Gasthörer sind nicht wahlberechtigt.</p>
+
+	<p>Wählen kann nur, wer im Wählerverzeichnis eingetragen ist.</p>
+
+	<p>Das Wählerverzeichnis liegt in der Zeit vom <span class="start_auslage_waehlerverzeichnis"><b>13. November</b></span> bis zum <span class="ende_auslegung_waehlerverzeichnis"><b>18. November 2015</b></span> <span class="ort_auslegung_waehlerverzeichnis"><b>im Geschäftszimmer des Kunsthistorischen Instituts</b></span> <span class="zeit_auslegung_waehlerverzeichnis">während der allgemeinen Öffnungszeiten</span> zur Einsicht aus. </p>
+
+	<p>Einsprüche gegen die Richtigkeit des Wählerverzeichnisses können bei der Wahlleiterin innerhalb der Auslegungsfrist, jedoch spätestens bis \textbf{Mittwoch, den 18. November 2015, 18:00 Uhr} eingelegt werden. </p>
+
+	<h3>Briefwahl</h3>
+
+	<p>Es ist in begründeten Ausnahmefällen möglich, Briefwahl zu beantragen. Der Briefwahlantrag ist schriftlich einzureichen und zu begründen. Er muss Name, Anschrift und Matrikelnummer des Antragsstellers enthalten.</p>
+
+	<p>Anträge auf Briefwahl müssen bis spätestens <span class="frist_briefwahlantraege"><b>Samstag, den 21. November 2015, 18:00 Uhr</b></span> bei der Wahlleiterin eingegangen sein. Jeder Briefwähler hat die Briefwahlunterlagen bis spätestens 24 Stunden vor der Wahl bei der Wahlleiterin abzuholen. Briefwähler, die außerdem nicht in der Lage sind, ihre Briefwahlunterlagen persönlich bei der Wahlleiterin abzuholen, können die Briefwahlunterlagen zusammen mit dem Antrag auf Briefwahl schriftlich anfordern.</p>
+
+	<h3>Versiegelung</h3>
+	
+	<p>Die öffentliche Versiegelung der Wahlurnen findet am <span class="datum_versiegelung">31.02.2016</span> <span class="uhrzeit_versiegelung">um 11:11 Uhr</span> <span class="ort_versiegelung">im Hinterhof</span> statt.</p>
+	
+	
+	<h3>Auszählung</h3>
+
+	<p>Die öffentliche Auszählung der Wahl findet am <span class="datum_auszaehlung">2. Dezember 2015</span> <span class="uhrzeit_auszaehlung">direkt im Anschluss an das Ende der Wahl um 16:00 Uhr</span> <span class="ort_auszaehlung">im Fachschaftsraum über der Diathek</span> statt.</p>
+
+
+	<h3>Konstituierende Sitzung</h3>
+
+	<p>Die konstituierende Sitzung <span class="derdesfsvfsr">der</span> neu gewählten <span class="fsvfsr">Fachschaftsvertretung/Fachschaftsrat</span> findet am <span class="datum_uhrzeit_konstituierende_sitzung">8. Dezember 2015 ab 12 Uhr</span> <span class="ort_konstituierende_sitzung">im Fachschaftsraum über der Diathek</span> statt.</p>
+
 
 
     </div>
