Wochentag berechnung und Test auf Wahlzeitrumslänge

--- a/index.html
+++ b/index.html
@@ -34,13 +34,20 @@
 		<div class="col-sm-2">
 		<input type="text" class="form-control" id="datestart">
 		</div>
+		<div>
+		    <p id="wochentag_1"></p> 
+		</div>
 		</div>
 		<div class="form-group">
 		<label for="dateend" class="col-sm-2 control-label">Letzter Wahltag</label>
 		<div class="col-sm-2">
 		<input type="text" class="form-control" id="dateend">
 		</div>
+		<div>
+		    <p id="wochentag_2"></p> 
 		</div>
+		</div>
+		
 	</div>
 
 	<div class="row">
