--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                  Festlegung des Ortes und Termins für die konstituierende Sitzung des gewählten Organs<br/>
             </td><td id="flaowvz">-</td><td><a href="https://sp.uni-bonn.de/dokumente/idx/Ordnungen/FSWO.html#11">§11 Abs. 2</a></td
         </tr>
-        <tr><td>Übernhame des Wählendenverzeichnisses</td><td id="uebernahmewvz">-</td><td><a href="https://sp.uni-bonn.de/dokumente/idx/Ordnungen/FSWO.html#12">§12 Abs. 1</a></td</tr>
+        <tr><td>Übernahme des Wählendenverzeichnisses</td><td id="uebernahmewvz">-</td><td><a href="https://sp.uni-bonn.de/dokumente/idx/Ordnungen/FSWO.html#12">§12 Abs. 1</a></td</tr>
 		<tr><td>Wahlbekanntmachung</td><td id="wbk">-</td><td><a href="https://sp.uni-bonn.de/dokumente/idx/Ordnungen/FSWO.html#13">§13 Abs. 1</a></td</tr>
 		<tr><td class="wb">Auslage des Wählendenverzeichnisses (mindestens 3 Tage)</td><td>Zwischen <p id="alwvzs">-</p> und <p id="alwvze">-</p></td><td><a href="https://sp.uni-bonn.de/dokumente/idx/Ordnungen/FSWO.html#12">§12 Abs. 3</a><br/><a href="https://sp.uni-bonn.de/dokumente/idx/Ordnungen/FSWO.html#12">§11 Abs. 2</a></td</tr>
 		<tr><td class="wb">Frist zur Einreichung von Kandidaturen</td><td>Zwischen <p id="wvs">-</p> und <p id="wve">-</p></td><td><a href="https://sp.uni-bonn.de/dokumente/idx/Ordnungen/FSWO.html#11">§11 Abs. 2</a></td</tr>
