change base url

--- a/Bekanntmachung/wahlbekanntmachung.html
+++ b/Bekanntmachung/wahlbekanntmachung.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>Wahlbekanntmachung</title>
-    <base href="../">
+    <!--base href="../"-->
+    <base href="{{ site.url }}">
     <script>
         window.onload = function () {
             bekanntmachung_onload()
