--- a/Bekanntmachung/wahlbekanntmachung.html
+++ b/Bekanntmachung/wahlbekanntmachung.html
@@ -51,7 +51,20 @@
 </head>
 <body>
     <div class="container" id="content">
-    
+        <div class="no-print" id="menu">
+            <ul class="nav nav-tabs">
+            <li class="nav-item">
+                <a class="nav-link active" href="../index.html">Wahlfristen</a>
+            </li>
+            <li class="nav-item">
+                <a id="wahlbekanntmachung_link" class="nav-link" href="#">Wahlbekanntmachung</a>
+            </li>
+            <li class="nav-item disabled">
+                <a class="nav-link" href="#" aria-disabled="true">Stimmzettel</a>
+            </li>
+
+            </ul>
+        </div>
         <!-- Formulardaten -->
         <div id="wahl_data" class="no-print" >
             <h2>Wahltage</h2>
