--- a/index.html
+++ b/index.html
@@ -47,7 +47,20 @@
     </style>
   </head>
   <body>
+    
     <div class="container" id="content">
+    <ul class="nav nav-tabs">
+        <li class="nav-item">
+            <a class="nav-link active" href="#">Wahlfristen</a>
+        </li>
+        <li class="nav-item">
+            <a id="wahlbekanntmachung_link" class="nav-link" href="Bekanntmachung/wahlbekanntmachung.html?">Wahlbekanntmachung</a>
+        </li>
+        <li class="nav-item disabled">
+            <a class="nav-link" href="#" aria-disabled="true">Stimmzettel</a>
+        </li>
+
+    </ul>
 	<h1>Wahlfristen</h1>
 
 	<h2>Wahltage</h2>
@@ -72,7 +85,7 @@
 		</div>
 		
 	</div>
-    <a id="wahlbekanntmachung_link" href="Bekanntmachung/wahlbekanntmachung.html?"> Wahlbekanntmachung </a>
+	
 	<div class="row">
 	<h2>Fristen</h2>
 	<div class="col-lg-8">
