--- a/Bekanntmachung/wahlbekanntmachung.html
+++ b/Bekanntmachung/wahlbekanntmachung.html
@@ -242,11 +242,11 @@
                         <div class="form-group">
                             <label class="col-sm-2 control-label">Datum:</label>
                             <div class="col-sm-2">
-                                <input type="text" class="form-control datepicker" value="18.11.2019">
+                                <input type="text" class="form-control datepicker urnenstandort_datum" value="18.11.2019">
                             </div>
                             <label class="col-sm-2 control-label">von: </label>
                             <div class="col-sm-2 input-group clockpicker" data-autoclose="true">
-                                <input type="text" class="form-control" value="10:00">
+                                <input type="text" class="form-control urnenstandort_start" value="10:00">
                                 <span class="input-group-addon">
                                     <span class="glyphicon glyphicon-time"></span>
                                  </span>
@@ -256,13 +256,13 @@
                          <div class="form-group">
                             <label class="col-sm-2 control-label">Ort:</label>
                             <div class="col-sm-2">
-                                <input type="text" class="form-control" value="im Foyer">
+                                <input type="text" class="form-control urnenstandort_ort" value="im Foyer des YOLO-Instituts">
                             </div>
                             
                             
                             <label class="col-sm-2 control-label">bis: </label>
                             <div class="col-sm-2 input-group clockpicker" data-autoclose="true">
-                                <input type="text" class="form-control" value="18:00">
+                                <input type="text" class="form-control urnenstandort_end" value="18:00">
                                 <span class="input-group-addon">
                                     <span class="glyphicon glyphicon-time"></span>
                                  </span>
@@ -290,11 +290,10 @@
 
 	    <p>Das Wahllokal ist zu folgenden Zeiten an folgenden Orten geöffnet:</p>
 
-	    <table class="table table-striped table-hover">
+	    <table id="urnenstandorte_table" class="table table-striped table-hover">
 	    <tr><th>Datum</th><th>Uhrzeit</th><th>Ort</th></tr>
-	    <tr><td>Montag, 30. November 2015</td><td>10:00 - 16:00 Uhr</td><td>Foyer des Kunsthistorischen Instituts</td></tr>
-	    <tr><td>Dienstag, 01. Dezember 2015</td><td>10:00 - 16:00 Uhr</td><td>Foyer des Kunsthistorischen Instituts</td></tr>
-	    <tr><td>Mittwoch, 02. Dezember 2015</td><td>10:00 - 16:00 Uhr</td><td>Foyer des Kunsthistorischen Instituts</td></tr>
+	    <tr id="urnen_standort_table_hiddenexample" style="display:None"><td><span class= urnenstandort_datum>Montag, 30. November 2015</span></td><td><span class="urnenstandort_beginn">10:00</span> - <span class="urnenstandort_ende">16:00</span> Uhr</td><td><span class="urnenstandort_ort">Foyer des Kunsthistorischen Instituts</span></td></tr>
+
 	    </table>
 
 	    <h3>Kandiaturen</h3>
