--- a/Bekanntmachung/wahlbekanntmachung.html
+++ b/Bekanntmachung/wahlbekanntmachung.html
@@ -18,6 +18,7 @@
     <script src="../js/jquery-ui.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="../js/bootstrap.min.js"></script>
+    <script src="../js/create_link.js"></script>
     <script src="../js/wahlbekanntmachung.js"></script>
     <script src="../js/jquery-clockpicker.min.js"></script>
     <script src="../js/datepicker-de.js"></script>
