urnenstandorte werden jetzt auch gespeichert

--- a/Bekanntmachung/wahlbekanntmachung.html
+++ b/Bekanntmachung/wahlbekanntmachung.html
@@ -249,11 +249,11 @@
                         <div class="form-group">
                             <label class="col-sm-2 control-label">Datum:</label>
                             <div class="col-sm-2">
-                                <input type="text" class="form-control datepicker urnenstandort_datum" value="18.11.2019">
+                                <input type="text" name="urnenstandort_datum" class="form-control datepicker urnenstandort_datum" value="18.11.2019">
                             </div>
                             <label class="col-sm-2 control-label">von: </label>
                             <div class="col-sm-2 input-group clockpicker" data-autoclose="true">
-                                <input type="text" class="form-control urnenstandort_start" value="10:00">
+                                <input type="text" name="urnenstandort_start" class="form-control urnenstandort_start" value="10:00">
                                 <span class="input-group-addon">
                                     <span class="glyphicon glyphicon-time"></span>
                                  </span>
@@ -263,13 +263,13 @@
                          <div class="form-group">
                             <label class="col-sm-2 control-label">Ort:</label>
                             <div class="col-sm-2">
-                                <input type="text" class="form-control urnenstandort_ort" value="im Foyer des YOLO-Instituts">
+                                <input type="text" name="urnenstandort_ort" class="form-control urnenstandort_ort" value="im Foyer des YOLO-Instituts">
                             </div>
                             
                             
                             <label class="col-sm-2 control-label">bis: </label>
                             <div class="col-sm-2 input-group clockpicker" data-autoclose="true">
-                                <input type="text" class="form-control urnenstandort_end" value="18:00">
+                                <input type="text" name="urnenstandort_end" class="form-control urnenstandort_end" value="18:00">
                                 <span class="input-group-addon">
                                     <span class="glyphicon glyphicon-time"></span>
                                  </span>
