--- a/Stimmzettel/stimmzettel.html
+++ b/Stimmzettel/stimmzettel.html
@@ -146,7 +146,7 @@
                          <div class="form-group">
                             <label class="col-sm-1 control-label">Name:</label>
                             <div class="col-sm-4">
-                                <input type="text" class="form-control kandidatur_name" value="Max Maria Musterperson">
+                                <input type="text" name="kandidatur_name" class="form-control kandidatur_name" value="Max Maria Musterperson">
                             </div> 
                             <div class="col-sm-3">
                                 <button type="button" class="form-control" onclick="delete_kandidatur(this)">diese Kandidatur entfernen</button>
