urls beim drucken verstecken

--- a/Bekanntmachung/wahlbekanntmachung.html
+++ b/Bekanntmachung/wahlbekanntmachung.html
@@ -1,4 +1,5 @@
-<html>
+<!DOCTYPE html>
+<html moznomarginboxes mozdissallowselectionprint>
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -35,6 +36,13 @@
             {
                 display: none !important;
             }
+            @page {
+                margin:0;
+                
+            }
+            body {
+                margin: 1.6cm;
+            }   
         }
     </style>
     
