--- a/Stimmzettel/stimmzettel.html
+++ b/Stimmzettel/stimmzettel.html
@@ -1,4 +1,5 @@
-<html>
+<!DOCTYPE html>
+<html moznomarginboxes mozdissallowselectionprint>
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -35,6 +36,13 @@
             {
                 display: none !important;
             }
+            @page {
+                margin:0;
+                
+            }
+            body {
+                margin: 1.6cm;
+            }       
         }
     </style>
     
@@ -58,7 +66,7 @@
                 <a class="nav-link active" href="../index.html">Wahlfristen</a>
             </li>
             <li class="nav-item">
-                <a id="wahlbekanntmachung_link" class="nav-link" href="../Wahlbekanntmachung/wahlbekanntmachung.html?">Wahlbekanntmachung</a>
+                <a id="wahlbekanntmachung_link" class="nav-link" href="../Bekanntmachung/wahlbekanntmachung.html?">Wahlbekanntmachung</a>
             </li>
             <li class="nav-item disabled">
                 <a class="nav-link" href="#" aria-disabled="true">Stimmzettel</a>
