--- a/Bekanntmachung/wahlbekanntmachung.html
+++ b/Bekanntmachung/wahlbekanntmachung.html
@@ -69,7 +69,7 @@
                 <a id="wahlbekanntmachung_link" class="nav-link" href="#">Wahlbekanntmachung</a>
             </li>
             <li class="nav-item disabled">
-                <a class="nav-link" href="../Stimmzettel/stimmzettel.html" aria-disabled="true">Stimmzettel</a>
+                <a class="nav-link" href="../Stimmzettel/stimmzettel.html">Stimmzettel</a>
             </li>
 
             </ul>
