--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <a id="wahlbekanntmachung_link" class="nav-link" href="Bekanntmachung/wahlbekanntmachung.html?">Wahlbekanntmachung</a>
         </li>
         <li class="nav-item disabled">
-            <a class="nav-link" href="Stimmzettel/stimmzettel.html?" aria-disabled="true">Stimmzettel</a>
+            <a class="nav-link" href="Stimmzettel/stimmzettel.html?">Stimmzettel</a>
         </li>
 
     </ul>
