--- a/Bekanntmachung/wahlbekanntmachung.html
+++ b/Bekanntmachung/wahlbekanntmachung.html
@@ -68,7 +68,7 @@
             <li class="nav-item">
                 <a id="wahlbekanntmachung_link" class="nav-link" href="#">Wahlbekanntmachung</a>
             </li>
-            <li class="nav-item disabled">
+            <li class="nav-item">
                 <a class="nav-link" href="../Stimmzettel/stimmzettel.html">Stimmzettel</a>
             </li>
 
