--- a/Stimmzettel/stimmzettel.html
+++ b/Stimmzettel/stimmzettel.html
@@ -71,7 +71,7 @@
             <li class="nav-item">
                 <a id="wahlbekanntmachung_link" class="nav-link" href="../Bekanntmachung/wahlbekanntmachung.html?">Wahlbekanntmachung</a>
             </li>
-            <li class="nav-item disabled">
+            <li class="nav-item">
                 <a class="nav-link" href="#" aria-disabled="true">Stimmzettel</a>
             </li>
 
