--- a/index.html
+++ b/index.html
@@ -94,30 +94,29 @@
 		<tr><td>Festlegung des Wahltermins</td><td id="flwahltermin">-</td><td><a href="https://sp.uni-bonn.de/dokumente/idx/Ordnungen/FSWO.html#§5">§5 Abs. 3</a></td></tr>
 		<tr><td>Wahl des Wahlleiters und des Wahlausschusses</td><td id="wlundwa">-</td><td> <a href="https://sp.uni-bonn.de/dokumente/idx/Ordnungen/FSWO.html#$10">§10 Abs. 2</a></td></tr>
 		<tr><td>Stichtag Wahlberechtigung</td><td id="stwber">-</td><td><a href="https://sp.uni-bonn.de/dokumente/idx/Ordnungen/FSWO.html#9">§9 Abs. 1</a></td></tr>
-		<tr><td>Konstituierende Sitzung des Wahlausschusses</td><td id="konstwa">-</td><td><a href="https://sp.uni-bonn.de/dokumente/idx/Ordnungen/FSWO.html#11">§11 Abs. 1</a></td</tr>
+		<tr><td>Konstituierende Sitzung des Wahlausschusses</td><td id="konstwa">-</td><td><a href="https://sp.uni-bonn.de/dokumente/idx/Ordnungen/FSWO.html#11">§11 Abs. 1</a></td></tr>
 		<tr><td> Festlegung der Urnenstandorte und -öffnungszeiten <br/>
                  Festlegung der Auslageorte für das Wählendenverzeichnis und des Zeitraums der Auslage<br/>
                  Festlegung der gemeinsamen Frist für die Einreichung von Kandidaturen, Briefwahlanträgen und Einsprüchen gegen das Wählendenverzeichnis<br/>
                  Festlegung des Zeitpunkts des Endes der Wahl und des Ortes für die Auszählung der Wahl<br/>
                  Festlegung des Ortes und Termins für die konstituierende Sitzung des gewählten Organs<br/>
-            </td><td id="flaowvz">-</td><td><a href="https://sp.uni-bonn.de/dokumente/idx/Ordnungen/FSWO.html#11">§11 Abs. 2</a></td
+            </td><td id="flaowvz">-</td><td><a href="https://sp.uni-bonn.de/dokumente/idx/Ordnungen/FSWO.html#11">§11 Abs. 2</a></td>
         </tr>
-        <tr><td>Übernahme des Wählendenverzeichnisses</td><td id="uebernahmewvz">-</td><td><a href="https://sp.uni-bonn.de/dokumente/idx/Ordnungen/FSWO.html#12">§12 Abs. 1</a></td</tr>
-		<tr><td>Wahlbekanntmachung</td><td id="wbk">-</td><td><a href="https://sp.uni-bonn.de/dokumente/idx/Ordnungen/FSWO.html#13">§13 Abs. 1</a></td</tr>
-		<tr><td class="wb">Auslage des Wählendenverzeichnisses (mindestens 3 Tage)</td><td>Zwischen <p id="alwvzs">-</p> und <p id="alwvze">-</p></td><td><a href="https://sp.uni-bonn.de/dokumente/idx/Ordnungen/FSWO.html#12">§12 Abs. 3</a><br/><a href="https://sp.uni-bonn.de/dokumente/idx/Ordnungen/FSWO.html#12">§11 Abs. 2</a></td</tr>
-		<tr><td class="wb">Frist zur Einreichung von Kandidaturen</td><td>Zwischen <p id="wvs">-</p> und <p id="wve">-</p></td><td><a href="https://sp.uni-bonn.de/dokumente/idx/Ordnungen/FSWO.html#11">§11 Abs. 2</a></td</tr>
+        <tr><td>Übernahme des Wählendenverzeichnisses</td><td id="uebernahmewvz">-</td><td><a href="https://sp.uni-bonn.de/dokumente/idx/Ordnungen/FSWO.html#12">§12 Abs. 1</a></td></tr>
+		<tr><td>Wahlbekanntmachung</td><td id="wbk">-</td><td><a href="https://sp.uni-bonn.de/dokumente/idx/Ordnungen/FSWO.html#13">§13 Abs. 1</a></td></tr>
+		<tr><td class="wb">Auslage des Wählendenverzeichnisses (mindestens 3 Tage)</td><td>Zwischen <p id="alwvzs">-</p> und <p id="alwvze">-</p></td><td><a href="https://sp.uni-bonn.de/dokumente/idx/Ordnungen/FSWO.html#12">§12 Abs. 3</a><br/><a href="https://sp.uni-bonn.de/dokumente/idx/Ordnungen/FSWO.html#12">§11 Abs. 2</a></td></tr>
+		<tr><td class="wb">Frist zur Einreichung von Kandidaturen</td><td>Zwischen <p id="wvs">-</p> und <p id="wve">-</p></td><td><a href="https://sp.uni-bonn.de/dokumente/idx/Ordnungen/FSWO.html#11">§11 Abs. 2</a></td></tr>
 		
-		<tr><td>Bekanntmachung der Wahlvorschläge</td><td id="bkwv">-</td><td><a href="https://sp.uni-bonn.de/dokumente/idx/Ordnungen/FSWO.html#11">§11 Abs. 3</a><br/><a href="https://sp.uni-bonn.de/dokumente/idx/Ordnungen/FSWO.html#14">§14 Abs. 3</a></td</tr>
-		<tr><td class="wb">Frist zur Einreichung von Briefwahlanträgen</td><td>Zwischen <p id="fbws">-</p> und <p id="fbwe">-</p></td><td><a href="https://sp.uni-bonn.de/dokumente/idx/Ordnungen/FSWO.html#11">§11 Abs. 2</a></td</tr>
-		<tr><td class="wb"><i>Erster Wahltag</i></td><td id="ewt">-</td><td><a href="https://sp.uni-bonn.de/dokumente/idx/Ordnungen/FSWO.html#5">§5 Abs. 2</a></td</tr>
-		<tr><td class="wb"><i>Letzter Wahltag</i></td><td id="lwt">-</td><td><a href="https://sp.uni-bonn.de/dokumente/idx/Ordnungen/FSWO.html#5">§5 Abs. 2</a></td</tr>
+		<tr><td>Bekanntmachung der Wahlvorschläge</td><td id="bkwv">-</td><td><a href="https://sp.uni-bonn.de/dokumente/idx/Ordnungen/FSWO.html#11">§11 Abs. 3</a><br/><a href="https://sp.uni-bonn.de/dokumente/idx/Ordnungen/FSWO.html#14">§14 Abs. 3</a></td></tr>
+		<tr><td class="wb">Frist zur Einreichung von Briefwahlanträgen</td><td>Zwischen <p id="fbws">-</p> und <p id="fbwe">-</p></td><td><a href="https://sp.uni-bonn.de/dokumente/idx/Ordnungen/FSWO.html#11">§11 Abs. 2</a></td></tr>
+		<tr><td class="wb"><i>Erster Wahltag</i></td><td id="ewt">-</td><td><a href="https://sp.uni-bonn.de/dokumente/idx/Ordnungen/FSWO.html#5">§5 Abs. 2</a></td></tr>
+		<tr><td class="wb"><i>Letzter Wahltag</i></td><td id="lwt">-</td><td><a href="https://sp.uni-bonn.de/dokumente/idx/Ordnungen/FSWO.html#5">§5 Abs. 2</a></td></tr>
 		<!--tr><td>Veröffentlichung des Wahlergebnisprotokolls</td><td id="vwep">-</td></tr-->
-		<tr><td>Konstituierende Sitzung der FSV</td><td>Zwischen <p id="konstfsvs">-</p> und <p id="konstfsve">-</p></td><td><a href="https://sp.uni-bonn.de/dokumente/idx/Ordnungen/FSWO.html#20">§20 </a></td</tr>
+		<tr><td>Konstituierende Sitzung der FSV</td><td>Zwischen <p id="konstfsvs">-</p> und <p id="konstfsve">-</p></td><td><a href="https://sp.uni-bonn.de/dokumente/idx/Ordnungen/FSWO.html#20">§20 </a></td></tr>
 		</table>
 	</div>
 	</div>
-	
-
+    </div>
     
   </body>
 </html>
