fehlende felder ergebnis

--- a/Ergebnis/ergebnis.html
+++ b/Ergebnis/ergebnis.html
@@ -80,15 +80,17 @@
         
       	<div id="wahlbekanntmachung">
       	<h2 style="text-align:center;"> Wahl <span class="derdesfsvfsr">der/des</span> <span class="fsvfsr">Fachschaftsvertretung/Fachschaftsrat</span> der Fachschaft <span class="fachschaft">YOLO</span> der Rheinischen Friedrich-Wilhelms-Universität Bonn </h2>
+      	<h3 style="text-align:center;">Election of the student representatives for <span class="fachschaft">YOLO</span> at the university of Bonn </h3>
       	<h1 style="text-align:center;"> - Wahlergebnis - </h1>
-      	<h4 style="text-align:center;"> <span class="ortdatum">Neuland, 31. 02. 2020</span></h4>
+      	<h2 style="text-align:center;"> - Election result </h2>
+      	<h4 style="text-align:center;"> <span class="ort_wahlergebnis">Neuland</span>,<span class="datum_wahlergebnis">Neuland</span></h4>
       	<br>
       	<div class="row">
       	    <div class="col-sm-6">
               	<p>Das Ergebnis der Wahl <span class="derdesfsvfsr">der/des</span> <span class="fsvfsr">Fachschaftsvertretung/Fachschaftsrat</span> der Fachschaft <span class="fachschaft">YOLO</span> vom <span class="wahlzeitraum">YOLO</span> lautet wie folgt.</p>
             </div>
              <div class="col-sm-6">
-              	<p>Das Ergebnis der Wahl <span class="derdesfsvfsr">der/des</span> <span class="fsvfsr">Fachschaftsvertretung/Fachschaftsrat</span> der Fachschaft <span class="fachschaft">YOLO</span> vom <span class="wahlzeitraum">YOLO</span> lautet wie folgt.</p>	
+              	<p>The election result for the election of the student representatives(<span class="fsvfsr">Fachschaftsvertretung/Fachschaftsrat</span>) for <span class="fachschaft">YOLO</span> <span class="wahlzeitraum_engl">YOLO</span> are listed below.</p>	
             </div>
         </div>
         <div class="row">
@@ -143,7 +145,7 @@
 
 	            <h3>Constituent assembly</h3>
 
-	            <p>The constituent assembly will take place at <span class="datum_konstituierende_sitzung">8. Dezember 2015 ab 12 Uhr</span> <span class="uhrzeit_konstituierende_sitzung">ab 12 </span> <span class="ort_konstituierende_sitzung">im Fachschaftsraum über der Diathek</span> .</p>
+	            <p>The constituent assembly will take place at <span class="datum_konstituierende_sitzung">8. Dezember 2015 ab 12 Uhr</span> <span class="uhrzeit_konstituierende_sitzung">ab 12 </span> <span class="ort_konstituierende_sitzung_engl">im Fachschaftsraum über der Diathek</span> .</p>
             </div>
         </div>
         <div class="row">
