fehlende felder ergebnis

--- a/Ergebnis/ergebnis.html
+++ b/Ergebnis/ergebnis.html
@@ -82,7 +82,7 @@
       	<h2 style="text-align:center;"> Wahl <span class="derdesfsvfsr">der/des</span> <span class="fsvfsr">Fachschaftsvertretung/Fachschaftsrat</span> der Fachschaft <span class="fachschaft">YOLO</span> der Rheinischen Friedrich-Wilhelms-Universität Bonn </h2>
       	<h3 style="text-align:center;">Election of the student representatives for <span class="fachschaft">YOLO</span> at the university of Bonn </h3>
       	<h1 style="text-align:center;"> - Wahlergebnis - </h1>
-      	<h2 style="text-align:center;"> - Election result </h2>
+      	<h2 style="text-align:center;"> - Election result - </h2>
       	<h4 style="text-align:center;"> <span class="ort_wahlergebnis">Neuland</span>,<span class="datum_wahlergebnis">Neuland</span></h4>
       	<br>
       	<div class="row">
